test/files/neg/t4584.check
t4584.scala:1: error: incomplete unicode escape
class A { val /u2
                ^
one error found
